# coach

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
coach/: main.py  utils.py
coach/builders/: personal_bests.py  recent_training_history.py  training_goal.py  training_state.py  utils.py  weekly_summary.py
coach/builders/tests/: test_recent_training_history.py  test_training_goal.py  test_training_state.py  test_training_state_builder.py  test_utils.py  test_weekly_summary.py
coach/cli/: app.py
coach/config/: coach.md  coach.md.example  config.py  env.py  logging.py  settings.py
coach/domain/: activity.py  chat.py  goals.py  models.py  personal_bests.py  training_summaries.py
coach/domain/tests/: test_chat.py  test_models.py
coach/ingestion/strava/: auth.py  client.py  mapper.py
coach/ingestion/strava/tests/: test_mapper.py
coach/persistence/: repository.py  repository_interface.py  serialization.py  sqlite.py
coach/persistence/sqlite/: database.py  repositories.py
coach/persistence/tests/: test_serialization.py
coach/reasoning/: adapter.py  clients.py  context.py  interface.py  parsing.py  prompts.py
coach/reasoning/tests/: test_context.py  test_parsing.py  test_prompts.py
coach/scripts/: coach.py  info.py  sync.py
coach/storage/: repository.py  sqlite.py
coach/tests/: test_utils.py  utils_for_tests.py
coach/training_state/: builder.py  serialization.py  training_state.py
coach/training_state/tests/: test_builder.py  test_serialization.py
